fix(edit): editing bug where blog contents that contains "unescaped" newlines would break the form

--- a/static/css/_styles.css
+++ b/static/css/_styles.css
@@ -66,7 +66,7 @@
 #preview > a {
     @apply hover:underline;
     @apply hover:italic;
-    @apply text-info;
+    @apply text-accent;
 }
 
 #preview > pre {
